[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-git-versioning"]
build-backed = "setuptools.build_meta"

[project]
name = "chimedb.dataset"
authors = [
  {name = "Rick Nitsche for the CHIME Collaboration", email = "dvw@phas.ubc.ca"}
]
description = "CHIME dataset (comet) ORM"
requires-python = ">=3.8"
dynamic = ["readme", "version"]
license = {file = "LICENSE"}
dependencies = [
    "chimedb @ git+https://github.com/chime-experiment/chimedb.git",
    "click",
    "peewee >= 3.10",
]

[project.scripts]
dataset_utils = "chimedb.dataset.utils:cli"

[project.optional-dependencies]
test = [
  "pytest >= 7.0"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools-git-versioning]
enabled = true
